# modality-ts

./: .gitignore  AGENTS.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  biome.json  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stryker.config.mjs  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.mutation.config.ts
.codex/environments/: environment.toml
.cursor/: relocate_plugins.py
.cursor/plans/: 260615-02-rust-checker-ir-runtime.md  260615-checker-runtime-hot-path-optimization.md  260615-checker-runtime-optimization.md  260615-client-module-context-boundaries.md  260615-multiplatform-native-and-local-install.md  260615-props-scoped-extract-artifacts.md  (+83 more)
benchmarks/: README.md  manifest.json
crates/checker/: Cargo.toml
crates/checker/src/: canon.rs  ctl.rs  diagnostics.rs  domain.rs  effect.rs  expr.rs  frontier.rs  graph.rs  lib.rs  memory.rs  model.rs  mount.rs  navigation.rs  por.rs  property.rs  report.rs  scc.rs  search.rs  stabilize.rs  state.rs  step.rs  trace.rs  transition_index.rs  visited.rs
docs/: _implement.md  design.md  docusaurus.config.js  implement.md  lt-demo.marp.md  package.json  pnpm-lock.yaml  sidebars.js  todo.md
extract-validity-report/: comment.md  report.json
tools/: benchmark-ci.ts  build-rust-native.mjs  canary-ci.ts  check-performance-benchmark.ts  checker-profile.ts  conformance-ci.ts  depcruise.config.cjs  examples-ci.ts  phase7-differential.ts  publish-npm.ts  scaffold-ledgerops-props.ts  validity-ci.ts  validity-merge-ci.ts  verify-native-artifacts.ts
(+1346 files in other folders)
