[package]
name = "modality-checker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "modality_checker"
path = "src/lib.rs"

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
